@@ -39,6 +39,7 @@ import tech.pegasys.artemis.datastructures.blocks.SignedBeaconBlock;
 import tech.pegasys.artemis.datastructures.operations.Deposit;
 import tech.pegasys.artemis.datastructures.operations.VoluntaryExit;
 import tech.pegasys.artemis.datastructures.state.BeaconState;
+import tech.pegasys.artemis.datastructures.state.BeaconStateImpl;
 import tech.pegasys.artemis.datastructures.util.SimpleOffsetSerializer;
 import tech.pegasys.artemis.util.bls.BLSPublicKey;
 import tech.pegasys.artemis.util.bls.BLSSecretKey;
@@ -56,7 +57,6 @@ public abstract class TestSuite {
           "resources",
           "eth2.0-spec-tests",
           "tests");
-  private static final String FILE = "file://";
 
   @SuppressWarnings({"rawtypes"})
   public static void loadConfigFromPath(Path path) throws Exception {
@@ -84,11 +84,12 @@ public abstract class TestSuite {
     // reflection information
     if (Constants.SLOTS_PER_HISTORICAL_ROOT
         != SimpleOffsetSerializer.classReflectionInfo
-            .get(BeaconState.class)
+            .get(BeaconStateImpl.class)
             .getVectorLengths()
             .get(0)) {
       SimpleOffsetSerializer.setConstants();
     }
+    BeaconState.setConstants();
   }
 
   public static Integer loadMetaData(TestSet testSet) {
@@ -97,10 +98,9 @@ public abstract class TestSuite {
   }
 
   public static InputStream getInputStreamFromPath(Path path) {
-    URL url = null;
     InputStream in = null;
     try {
-      url = new URL(FILE + path);
+      URL url = path.toUri().toURL();
       in = url.openConnection().getInputStream();
     } catch (IOException e) {
       LOG.warn("Failed to load " + path, e);
@@ -314,8 +314,8 @@ public abstract class TestSuite {
       throws Exception {
     loadConfigFromPath(configPath);
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
-    testSet.add(new TestObject("post.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.ssz", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -353,7 +353,7 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("block.yaml", SignedBeaconBlock.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -365,8 +365,8 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("block.yaml", SignedBeaconBlock.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
-    testSet.add(new TestObject("post.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -379,7 +379,7 @@ public abstract class TestSuite {
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("block.yaml", SignedBeaconBlock.class, null));
     testSet.add(new TestObject("meta.yaml", Integer.class, Paths.get("bls_setting")));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -392,8 +392,8 @@ public abstract class TestSuite {
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("deposit.yaml", Deposit.class, null));
     testSet.add(new TestObject("meta.yaml", Integer.class, Paths.get("bls_setting")));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
-    testSet.add(new TestObject("post.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -405,7 +405,7 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("deposit.yaml", Deposit.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -417,8 +417,8 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("deposit.yaml", Deposit.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
-    testSet.add(new TestObject("post.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -431,7 +431,7 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject(operationName, operationClass, null));
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -444,8 +444,8 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject(operationName, operationClass, null));
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
-    testSet.add(new TestObject("post.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.ssz", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -458,7 +458,7 @@ public abstract class TestSuite {
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("voluntary_exit.yaml", VoluntaryExit.class, null));
     testSet.add(new TestObject("meta.yaml", Integer.class, Paths.get("bls_setting")));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -470,7 +470,7 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("voluntary_exit.yaml", VoluntaryExit.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -482,8 +482,8 @@ public abstract class TestSuite {
 
     TestSet testSet = new TestSet(path);
     testSet.add(new TestObject("voluntary_exit.yaml", VoluntaryExit.class, null));
-    testSet.add(new TestObject("pre.yaml", BeaconState.class, null));
-    testSet.add(new TestObject("post.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("pre.yaml", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.yaml", BeaconStateImpl.class, null));
 
     return findTestsByPath(testSet);
   }
@@ -498,8 +498,8 @@ public abstract class TestSuite {
     Integer block_count = loadMetaData(metaDataSet);
 
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
-    testSet.add(new TestObject("post.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.ssz", BeaconStateImpl.class, null));
     for (int i = 0; i < block_count; i++) {
       testSet.add(new TestObject("blocks_" + i + ".ssz", SignedBeaconBlock.class, null));
     }
@@ -519,7 +519,7 @@ public abstract class TestSuite {
     Integer block_count = loadMetaData(metaDataSet);
 
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
     for (int i = 0; i < block_count; i++) {
       testSet.add(new TestObject("blocks_" + i + ".ssz", SignedBeaconBlock.class, null));
     }
@@ -534,8 +534,8 @@ public abstract class TestSuite {
     loadConfigFromPath(configPath);
 
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("pre.ssz", BeaconState.class, null));
-    testSet.add(new TestObject("post.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("pre.ssz", BeaconStateImpl.class, null));
+    testSet.add(new TestObject("post.ssz", BeaconStateImpl.class, null));
     testSet.add(new TestObject("slots.yaml", UnsignedLong.class, null));
 
     return findTestsByPath(testSet);
@@ -562,7 +562,7 @@ public abstract class TestSuite {
     testSet.add(
         new TestObject(
             "quickstart_genesis_" + numValidators + "_" + genesisTime + ".ssz",
-            BeaconState.class,
+            BeaconStateImpl.class,
             null));
 
     return findTestsByPath(testSet);
@@ -577,7 +577,7 @@ public abstract class TestSuite {
     Integer deposits_count = loadMetaData(metaDataSet);
 
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("state.ssz", BeaconState.class, null));
+    testSet.add(new TestObject("state.ssz", BeaconStateImpl.class, null));
     testSet.add(new TestObject("eth1_timestamp.yaml", UnsignedLong.class, null));
     testSet.add(new TestObject("eth1_block_hash.ssz", Bytes32.class, null));
     for (int i = 0; i < deposits_count; i++) {
@@ -596,7 +596,7 @@ public abstract class TestSuite {
     loadConfigFromPath(configPath);
 
     TestSet testSet = new TestSet(path);
-    testSet.add(new TestObject("genesis.yaml", BeaconState.class, null));
+    testSet.add(new TestObject("genesis.yaml", BeaconStateImpl.class, null));
     testSet.add(new TestObject("is_valid.yaml", Boolean.class, null));
 
     return findTestsByPath(testSet);
